Se agrego el header de la home, con lenguajes y estilos desktop y mobile

--- a/src/lang/en-US.json
+++ b/src/lang/en-US.json
@@ -1,5 +1,8 @@
 {
     "nav.home": "Home",
     "nav.posada": "House",
-    "nav.contact": "Contact"
+    "nav.contact": "Contact",
+    
+    "header.title": "Discover our landscapes",
+    "header.btn": "Check for availability!"
 }
