Se agrego la seccion de San Rafael con sus estilos desktop y mobile

--- a/src/lang/en-US.json
+++ b/src/lang/en-US.json
@@ -4,5 +4,9 @@
     "nav.contact": "Contact",
     
     "header.title": "Discover our landscapes",
-    "header.btn": "Check for availability!"
+    "header.btn": "Check for availability!",
+    
+    "sanRafael.text1": "Many of the best landscapes in the country, fun, adventure, party, peace, harmony and excellent gastronomy await you in San Rafael. Making our city the best choice to enjoy both as a family and individually.",
+    "sanRafael.text": "And at La Posada de Don Felipe we give you the necessary comfort so that you feel at home in our city. Do you still have any questions?",
+    "sanRafael.btn": "See the house"
 }
