--- a/src/lang/es-AR.json
+++ b/src/lang/es-AR.json
@@ -4,5 +4,9 @@
     "nav.contact": "Contacto",
 
     "header.title": "Descubrí nuestros paisajes",
-    "header.btn": "¡Consulta disponibilidad!"
+    "header.btn": "¡Consulta disponibilidad!",
+
+    "sanRafael.text1": "En San Rafael no solo te esperan muchos de los mejores paisajes del pais, tambien diversion, aventura, fiesta, paz, armonia y excelente gastronomia. Haciendo de nuestra ciudad la mejor eleccion para disfrutar tanto en familia como individualmente.",
+    "sanRafael.text": "Y en La Posada de Don Felipe te damos la comodidad necesaria para que en nuestra ciudad te sientas como en casa. ¿Todavia te queda alguna duda?",
+    "sanRafael.btn": "Ver la posada"
 }
