--- a/src/lang/es-AR.json
+++ b/src/lang/es-AR.json
@@ -26,6 +26,23 @@
     "circuitos.card6.text": "Cuenta con un club de náutica y pesca donde se practican deportes acuáticos como el esquí, wakeboard, windsurf, canotaje, buceo, pesca, entre otros. Alrededor de sus costas se encuentran casas de fin de semana, restaurantes, campamentos,cabañas.",
     "circuitos.card6": "A aproximadamente 35 km de La Posada de Don Felipe",
 
+    "posada.header.title": "Nuestra hermosa posada",
+    "posada.header.description": "Como muchas otras familias durante la pandemia mundial nos vimos acorralados economicamente. Tras meses de sudor, lagrimas y remodelación nació La Posada de Don Felipe",
+    "posada.banner.text": "¡Conocé nuestra posada!",
+
+    "ambiente.living.title": "Living o sala de estar",
+    "ambiente.living.description": "Aire acondicionado, calefacción, juego de sillones, televisor 32’’ con DirecTV. El espacio ideal para pasar el rato en familia.",
+    "ambiente.dormitorios.title": "Dormitorios",
+    "ambiente.dormitorios.description": "3 dormitorios preparados para 2 personas cada uno, 2 con camas individuales y uno matrinominal. Cada dormitorio cuenta con almohadas, sabanas, y ventilador a control remoto.",
+    "ambiente.baño.title": "Ante-baño y baño",
+    "ambiente.baño.description": "Calefacción, juego de toallas y toallones para hasta 6 personas, lavatorio, inhodoro, bidet y ducha.",
+    "ambiente.garage.title": "Garaje",
+    "ambiente.garage.description": "Garaje cerrado y techado con espacio para 2 autos.",
+    "ambiente.cocina.title": "Cocina y comedor",
+    "ambiente.cocina.description": "Cocina amplia equipada con cocina de 4 hornallas y horno, heladera, y vajilla para hasta 6 personas, además de algunos utensillos utiles para cocinar.",
+    "ambiente.patio.title": "Patio",
+    "ambiente.patio.description": "Amplio patio con un sector semi techado con mucha sombra, parrilla, pileta, sillones y mesa para disfrutar al aire libre dentro de la posada.",
+
     "footer.info": "Somos una humilde familia que durante la pandemia tomó la desición de comenzar este emprendimiento para sustentarse. La remodelación de la casa en su totalidad cuenta con el sudor de cada uno de nosotros, para transformar la casa donde crecimos en un lugar completamente acogedor y que nuestro hogar tambien pueda ser el hogar momentaneo de otros.",
     "footer.contacto.title": "Contactanos: ",
     "footer.contacto.telefono": "Teléfonos: ",
