Se agregaron los estilos Desktop y los lenguajes de contacto section

--- a/src/lang/es-AR.json
+++ b/src/lang/es-AR.json
@@ -43,6 +43,29 @@
     "ambiente.patio.title": "Patio",
     "ambiente.patio.description": "Amplio patio con un sector semi techado con mucha sombra, parrilla, pileta, sillones y mesa para disfrutar al aire libre dentro de la posada.",
 
+    "contacto.banner.text": "¡Llena el formulario y reservá!",
+    "contacto.description": "Llenando el siguiente formulario realizaras tu consulta por disponibilidad para los dias especificados y en caso de tener otro tipo de consulta colocarla en forma de mensaje. Nosotros nos pondremos en contacto a la brevedad para informarte sobre disponibilidad y responder tus dudas",
+    "contacto.form.name": "Nombre:",
+    "contacto.form.email": "Email:",
+    "contacto.form.tel": "Teléfono:",
+    "contacto.form.entry": "Entrada:",
+    "contacto.form.exit": "Salida:",
+    "contacto.form.adults": "Cantidad adultos:",
+    "contacto.form.kids": "Cantidad niños:",
+    "contacto.form.babys": "Cantidad bebes:",
+    "contacto.form.message": "Consulta:",
+    "contacto.btnSubmit": "Enviar consulta",
+    "contacto.errors.noName": "Ingrese un nombre",
+    "contacto.errors.invalidName": "El nombre solo puede tener espacios y letras",
+    "contacto.errors.noEmail": "Ingrese su email",
+    "contacto.errors.invalidEmail": "Ingrese un email válido",
+    "contacto.errors.noTel": "Ingrese su teléfono",
+    "contacto.errors.invalidTel": "El número telefónico debe tener entre 7 y 14 números",
+    "contacto.errors.noEntry": "Ingrese la fecha de entrada",
+    "contacto.errors.noExit": "Ingrese la fecha de salida",
+    "contacto.errors.renterMax": "Tenemos una capacidad máxima de 6 personas",
+    "contacto.errors.noRenter": "Ingrese la cantidad de personas que se alojaran",
+
     "footer.info": "Somos una humilde familia que durante la pandemia tomó la desición de comenzar este emprendimiento para sustentarse. La remodelación de la casa en su totalidad cuenta con el sudor de cada uno de nosotros, para transformar la casa donde crecimos en un lugar completamente acogedor y que nuestro hogar tambien pueda ser el hogar momentaneo de otros.",
     "footer.contacto.title": "Contactanos: ",
     "footer.contacto.telefono": "Teléfonos: ",
