--- a/src/lang/en-US.json
+++ b/src/lang/en-US.json
@@ -43,6 +43,29 @@
     "ambiente.patio.title": "Garden",
     "ambiente.patio.description": "Large garden with a semi-roofed area with lots of shade, barbecue, pool, chairs and table to enjoy outdoors inside the inn.",
 
+    "contacto.banner.text": "Fill out the form and book!",
+    "contacto.description": "By filling out the following form you will make your query for availability for the specified days and if you have another type of query, place it in the form of a message. We will contact you shortly to inform you about availability and answer your questions.",
+    "contacto.form.name": "Name:",
+    "contacto.form.email": "Email:",
+    "contacto.form.tel": "Tel:",
+    "contacto.form.entry": "Entry:",
+    "contacto.form.exit": "Exit:",
+    "contacto.form.adults": "Number of adults:",
+    "contacto.form.kids": "Number of kids:",
+    "contacto.form.babys": "Number of babys:",
+    "contacto.form.message": "Messsage:",
+    "contacto.btnSubmit": "Send consult",
+    "contacto.errors.noName": "Enter a name",
+    "contacto.errors.invalidName": "The name can only have spaces and letters",
+    "contacto.errors.noEmail": "Enter a email",
+    "contacto.errors.invalidEmail": "Enter a valid email",
+    "contacto.errors.noTel": "Enter a phone number",
+    "contacto.errors.invalidTel": "The phone number must have between 7 and 14 numbers",
+    "contacto.errors.noEntry": "Enter the date of entry",
+    "contacto.errors.noExit": "Enter the date of exit",
+    "contacto.errors.renterMax": "We have a maximum capacity of 6 people",
+    "contacto.errors.noRenter": "Enter the number of people who will stay",
+
     "footer.info": "We are a humble family that during the pandemic made the decision to start this entrepreneurship to support themselves. The remodeling of the house in its entirety counts on the sweat of each one of us, to transform the house where we grew up into a completely welcoming place and that our home can also be the momentary home of others.",
     "footer.contacto.title": "Contact us: ",
     "footer.contacto.telefono": "Phone numbers: ",
